--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <title>JK SOLUTN</title>
   </head>
   <body>
-    <noscript>JK SOLUTN loan application.</noscript>
+    <noscript>JK SOLUTN loan application system.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
